--- a/src/app.html
+++ b/src/app.html
@@ -3,11 +3,16 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      description
+      content="Visual | Visual Art | Hologram | Key Moment | 3D Mapping"
+    />
     <link rel="icon" type="image/png" href="/images/logo.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Jura:wght@300..700&display=swap"
       rel="stylesheet"
     />
+    <title>Panama Visual</title>
     %sveltekit.head%
   </head>
   <body data-sveltekit-preload-data="hover">
